# ace-test

./: .clang-format  .clang-tidy  .clangd  .gitignore  CMakeLists.txt  CMakePresets.json  makefile  readme.md  test.avif  test.kra  test.xml
res/: license.rtf  license.txt
src/: benchmarks.cpp  common.cmake  common.hpp  config.hpp  error.hpp  library.cpp  library.hpp  main.cpp  main.rc  test.cpp  tests.cpp
src/avif/: CMakeLists.txt  main.ccm  main.cpp
src/boost/: CMakeLists.txt  main.ccm
src/brotli/: CMakeLists.txt  main.ccm  main.cpp
src/bzip2/: CMakeLists.txt  main.ccm  main.cpp
src/deflate/: CMakeLists.txt  main.ccm  main.cpp
src/font/: CMakeLists.txt  main.ccm
src/glm/: CMakeLists.txt  main.ccm  test.cpp  test.sh
src/glm-avx2/: CMakeLists.txt  main.ccm  test.cpp  test.sh
src/jpeg/: CMakeLists.txt  main.ccm  main.cpp
src/jpeg-turbo/: CMakeLists.txt  main.ccm  main.cpp
src/libxml2/: CMakeLists.txt  main.ccm  main.cpp
src/lz4/: CMakeLists.txt  main.ccm  main.cpp
src/lzma/: CMakeLists.txt  main.ccm  main.cpp
src/miniz/: CMakeLists.txt  main.ccm  main.cpp
src/openssl/: CMakeLists.txt  main.ccm
src/png/: CMakeLists.txt  main.ccm  main.cpp
src/pugixml/: CMakeLists.txt  main.ccm  main.cpp
src/sqlite3/: CMakeLists.txt  main.ccm
src/svg/: CMakeLists.txt  main.ccm  main.cpp
src/vulkan/: CMakeLists.txt  main.ccm
src/wayland/: CMakeLists.txt  main.ccm
src/wayland/cmake/: wayland.cmake
src/xml2/: CMakeLists.txt  main.ccm  main.cpp
src/zlib/: CMakeLists.txt  main.ccm  main.cpp
src/zstd/: CMakeLists.txt  main.ccm  main.cpp
